
syntax = "proto3";

package pb;


service RouteConverter {
  rpc Status (StatusRequest) returns (StatusResponse){}
  rpc Convert (ConvertRequest) returns (ConvertResponse){}
  rpc Exit (ExitRequest) returns (ExitResponse){}
}


message StatusRequest{
  
}

message StatusResponse{

}

message ConvertRequest{
  string InputFilename = 1;
}

message ConvertResponse{
  string OutputFilename = 1;
}

message ExitRequest {
  int32 Status=1;
}

message ExitResponse {
  int32 Status=1;
}